--- a/packages/proto/public/index.html
+++ b/packages/proto/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="/styles/tokens.css" />
         <link rel="stylesheet" href="/styles/page.css" />
     </head>
     <body>
@@ -11,8 +12,8 @@
         
         <h3>Wish Lists</h3>
         <ul>
-            <li data-budget=" - Budget: $320"><a href="wishlists/winter.html">Winter Items</a></li>
-            <li data-budget=" - Budget: $400"><a href="wishlists/beach_trip.html">Beach Trip</a></li>
+            <li data-budget=" - Budget: $320"><a href="winter.html">Winter Items</a></li>
+            <li data-budget=" - Budget: $400"><a href="beach_trip.html">Beach Trip</a></li>
         </ul>
     </body>
 </html>
