--- a/packages/proto/public/sunglass.html
+++ b/packages/proto/public/sunglass.html
@@ -1,66 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Swimsuit Details</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 20px;
-        }
-        .container {
-            max-width: 800px;
-            margin: auto;
-            background: #fff;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        h1 {
-            color: #333;
-        }
-        .image {
-            text-align: center;
-        }
-        .image img {
-            width: 100%; /* Full width of the container */
-            max-width: 600px; /* Maximum width of the image */
-            height: auto; /* Maintain aspect ratio */
-        }
-        .details {
-            margin-top: 20px;
-        }
-        .details h2 {
-            margin: 0;
-        }
-        .details p {
-            color: #666;
-            margin: 5px 0;
-        }
-    </style>
-</head>
-<body>
+    <head>
+        <link rel="stylesheet" href="/styles/tokens.css" />
+        <link rel="stylesheet" href="/styles/page.css" />
+    </head>
+    <body>
 
-    <div class="container">
-        <h1>Sunglass</h1>
-        <h3><a href="../wishlists/beach_trip.html">Wishlist</a></h3>
-        
-        <div class="image">
-            <img src="../pictures/sunglass.png" alt="Sunglass">
+        <div class="container">
+            <h1>Sunglass</h1>
+            <h3><a href="beach_trip.html">Wishlist</a></h3>
+            
+            <div class="details">
+                <p><strong>Price:</strong> $166.00</p>
+                <p><strong>Size:</strong> Small</p>
+                <p><strong>Brand:</strong> Ray Band</p>
+                <p><strong>Store:</strong> www.rayband.com</p>
+                <p><strong>Style:</strong> Aviator</p>
+                <p><strong>Type of Clothing:</strong> Accessory</p>
+            </div>
         </div>
 
-        <div class="details">
-            <p><strong>Price:</strong> $166.00</p>
-            <p><strong>Size:</strong> Small</p>
-            <p><strong>Brand:</strong> Ray Band</p>
-            <p><strong>Store:</strong> www.rayband.com</p>
-            <p><strong>Style:</strong> Aviator</p>
-            <p><strong>Type of Clothing:</strong> Accessory</p>
-        </div>
-    </div>
-
-</body>
+    </body>
 </html>
