--- a/packages/proto/public/winter.html
+++ b/packages/proto/public/winter.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <link rel="stylesheet" href="/styles/tokens.css" />
-        <link rel="stylesheet" href="/styles/page.css" />
-    </head>
-    <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Winter Wishlist</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="/styles/tokens.css">
+    <link rel="stylesheet" href="/styles/page.css">
+</head>
+<body>
+
+<article>
+
+    <header>
         <h1>Winter Wishlist</h1>
         <h3><a href="index.html">Home</a></h3>
+    </header>
+
+    <section>
         <h2>Budget: $320</h2>
-            
+
         <div class="item">
             <div>
                 <h2><a href="boots.html">Winter Boots</a></h2>
@@ -24,5 +38,9 @@
             </div>
         </div>
 
-    </body>
+    </section>
+
+</article>
+
+</body>
 </html>
