--- a/packages/proto/public/beach_trip.html
+++ b/packages/proto/public/beach_trip.html
@@ -17,9 +17,14 @@
 
     <article>
         <header>
-            <h1>Beach Trip Wishlist</h1>
-            <h3><a href="index.html">Home</a></h3>
+            <a href="index.html">
+                <h1 class="logo">DreamCart</h1>
+            </a>
+            <svg class="icon">
+                <use href="icons/accounts.svg#icon-profile" />
+            </svg>
         </header>
+        <h1>Beach Trip Wishlist</h1>
         
         <section>
             <h2>Budget: $400</h2>
