--- a/packages/proto/public/jacket.html
+++ b/packages/proto/public/jacket.html
@@ -5,6 +5,14 @@
         <link rel="stylesheet" href="/styles/page.css" />
     </head>
     <body>
+        <header>
+            <a href="index.html">
+                <h1 class="logo">DreamCart</h1>
+            </a>
+            <svg class="icon">
+                <use href="icons/accounts.svg#icon-profile" />
+            </svg>
+        </header>
         <div class="container">
             <h1>Winter Snow Coat</h1>
             <h3><a href="winter.html">Wishlist</a></h3>
