--- a/packages/proto/public/boots.html
+++ b/packages/proto/public/boots.html
@@ -1,22 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="utf-8" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        
+        <link
+        href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap"
+        rel="stylesheet" />
         <link rel="stylesheet" href="/styles/tokens.css" />
         <link rel="stylesheet" href="/styles/page.css" />
+        <link rel="stylesheet" href="/styles/item.css" />
+        <link rel="stylesheet" href="/styles/reset.css" />
     </head>
     <body>
         <header>
             <a href="index.html">
-                <h1 class="logo">DreamCart</h1>
+              <h1 class="logo">DreamCart</h1>
             </a>
             <svg class="icon">
                 <use href="icons/accounts.svg#icon-profile" />
             </svg>
         </header>
-        <div class="container">
-            <h1>Snow Boots</h1>
-            <h3><a href="winter.html">Wishlist</a></h3>
+        
+        <div class="back">
+            <h2>
+                <a href="wishlist_winter.html">Back to the Wishlist</a>
+                <svg class="icon">
+                    <use href="icons/accounts.svg#icon-list"/>
+                </svg>
+            </h2>
+        </div>
 
+        <div class="information-container">
+            <h2>Snow Boots</h2>
+            <img src="pictures/boots.png" alt="Boots" class="information-image">
             <div class="details">
                 <p><strong>Price:</strong> $95.00</p>
                 <p><strong>Size:</strong> 10</p>
@@ -26,5 +44,6 @@
                 <p><strong>Type of Clothing:</strong> shoes</p>
             </div>
         </div>
+
     </body>
 </html>
