Rework of look + clean up css and hmtl

--- a/packages/proto/public/flamingo_swimsuit.html
+++ b/packages/proto/public/flamingo_swimsuit.html
@@ -4,14 +4,11 @@
         <meta charset="utf-8" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        
-        <link
-        href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap"
-        rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap" rel="stylesheet" />
+
         <link rel="stylesheet" href="/styles/tokens.css" />
-        <link rel="stylesheet" href="/styles/page.css" />
+        <link rel="stylesheet" href="/styles/header.css" />
         <link rel="stylesheet" href="/styles/item.css" />
-        <link rel="stylesheet" href="/styles/reset.css" />
     </head>
     <body>
         <header>
@@ -22,28 +19,17 @@
                 <use href="icons/accounts.svg#icon-profile" />
             </svg>
         </header>
-        
-        <div class="back">
-            <h2>
-                <a href="wishlist_summer.html">Back to the Wishlist</a>
-                <svg class="icon">
-                    <use href="icons/accounts.svg#icon-list"/>
-                </svg>
-            </h2>
-        </div>
 
         <div class="information-container">
-            <h2>Black Sunglass</h2>
+            <span class="information-title"><strong>Flamingo Swimsuit</strong></span>
             <img src="pictures/swimsuit.png" alt="Swimsuit" class="information-image">
-            <div class="details">
-                <p><strong>Price:</strong> $40.00</p>
-                <p><strong>Size:</strong> Medium</p>
-                <p><strong>Brand:</strong> SwimStyle</p>
-                <p><strong>Store:</strong> www.beachwearboutique.com</p>
-                <p><strong>Style:</strong> One-Piece</p>
-                <p><strong>Type of Clothing:</strong> Swimwear</p>
-            </div>
-        </div>
+            <p class="detail"><strong>Price:</strong> $40.00</p>
+            <p class="detail"><strong>Size:</strong> Medium</p>
+            <p class="detail"><strong>Brand:</strong> SwimStyle</p>
+            <p class="detail"><strong>Store:</strong> www.beachwearboutique.com</p>
+            <p class="detail"><strong>Style:</strong> One-Piece</p>
+            <p class="detail"><strong>Type of Clothing:</strong> Swimwear</p>
+        </div>        
 
     </body>
 </html>
