--- a/packages/proto/public/sunglass.html
+++ b/packages/proto/public/sunglass.html
@@ -4,46 +4,32 @@
         <meta charset="utf-8" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        
-        <link
-        href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap"
-        rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap" rel="stylesheet" />
+
         <link rel="stylesheet" href="/styles/tokens.css" />
-        <link rel="stylesheet" href="/styles/page.css" />
+        <link rel="stylesheet" href="/styles/header.css" />
         <link rel="stylesheet" href="/styles/item.css" />
-        <link rel="stylesheet" href="/styles/reset.css" />
     </head>
     <body>
         <header>
-            <a href="index.html">
-              <h1 class="logo">DreamCart</h1>
-            </a>
+            <h1>
+                <a href="index.html">DreamCart</a>
+            </h1>
             <svg class="icon">
                 <use href="icons/accounts.svg#icon-profile" />
             </svg>
         </header>
-        
-        <div class="back">
-            <h2>
-                <a href="wishlist_summer.html">Back to the Wishlist</a>
-                <svg class="icon">
-                    <use href="icons/accounts.svg#icon-list"/>
-                </svg>
-            </h2>
-        </div>
 
         <div class="information-container">
-            <h2>Black Sunglass</h2>
+            <span class="information-title"><strong>Black Sunglasses</strong></span>
             <img src="pictures/sunglass.png" alt="Sunglass" class="information-image">
-            <div class="details">
-                <p><strong>Price:</strong> $166.00</p>
-                <p><strong>Size:</strong> Small</p>
-                <p><strong>Brand:</strong> Ray Band</p>
-                <p><strong>Store:</strong> www.rayband.com</p>
-                <p><strong>Style:</strong> Aviator</p>
-                <p><strong>Type of Clothing:</strong> Accessory</p>
-            </div>
-        </div>
+            <p class="detail"><strong>Price:</strong> $166.00</p>
+            <p class="detail"><strong>Size:</strong> Small</p>
+            <p class="detail"><strong>Brand:</strong> Ray Band</p>
+            <p class="detail"><strong>Store:</strong> www.rayband.com</p>
+            <p class="detail"><strong>Style:</strong> Aviator</p>
+            <p class="detail"><strong>Type of Clothing:</strong> Accessory</p>
+        </div>        
 
     </body>
 </html>
