--- a/packages/proto/public/flamingo_swimsuit.html
+++ b/packages/proto/public/flamingo_swimsuit.html
@@ -6,30 +6,38 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap" rel="stylesheet" />
 
+        <link rel="stylesheet" href="/styles/page.css" />
         <link rel="stylesheet" href="/styles/tokens.css" />
-        <link rel="stylesheet" href="/styles/header.css" />
-        <link rel="stylesheet" href="/styles/item.css" />
+        <script type="importmap">
+            {
+              "imports": {
+                "@calpoly/mustang": "https://unpkg.com/@calpoly/mustang"
+              }
+            }
+        </script>
+        <script type="module">
+            import { define } from "@calpoly/mustang";
+            import { ItemElement } from "/scripts/item.js";
+            import { HeaderElement } from "/scripts/header.js";
+          
+            define({
+              "item-element": ItemElement,
+              "header-element": HeaderElement
+            });
+        </script>
     </head>
     <body>
-        <header>
-            <a href="index.html">
-              <h1 class="logo">DreamCart</h1>
-            </a>
-            <svg class="icon">
-                <use href="icons/accounts.svg#icon-profile" />
-            </svg>
-        </header>
-
-        <div class="information-container">
-            <span class="information-title"><strong>Flamingo Swimsuit</strong></span>
-            <img src="pictures/swimsuit.png" alt="Swimsuit" class="information-image">
-            <p class="detail"><strong>Price:</strong> $40.00</p>
-            <p class="detail"><strong>Size:</strong> Medium</p>
-            <p class="detail"><strong>Brand:</strong> SwimStyle</p>
-            <p class="detail"><strong>Store:</strong> www.beachwearboutique.com</p>
-            <p class="detail"><strong>Style:</strong> One-Piece</p>
-            <p class="detail"><strong>Type of Clothing:</strong> Swimwear</p>
-        </div>        
-
+      <header-element></header-element>
+    
+      <item-element>
+        <span slot="item-name">Flamingo Swimsuit</span>
+        <img slot="item-image" src="pictures/swimsuit.png" />
+        <span slot="item-price">$40.00</span>
+        <span slot="item-size">Medium</span>
+        <span slot="item-brand">SwimStyle</span>
+        <span slot="item-store"> www.beachwearboutique.com</span>
+        <span slot="item-style">One-Piece</span>
+        <span slot="item-type">Swimwear</span>
+      </item-element>
     </body>
 </html>
