--- a/packages/proto/public/hat.html
+++ b/packages/proto/public/hat.html
@@ -6,30 +6,38 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap" rel="stylesheet" />
 
+        <link rel="stylesheet" href="/styles/page.css" />
         <link rel="stylesheet" href="/styles/tokens.css" />
-        <link rel="stylesheet" href="/styles/header.css" />
-        <link rel="stylesheet" href="/styles/item.css" />
+        <script type="importmap">
+            {
+              "imports": {
+                "@calpoly/mustang": "https://unpkg.com/@calpoly/mustang"
+              }
+            }
+        </script>
+        <script type="module">
+            import { define } from "@calpoly/mustang";
+            import { ItemElement } from "/scripts/item.js";
+            import { HeaderElement } from "/scripts/header.js";
+          
+            define({
+              "item-element": ItemElement,
+              "header-element": HeaderElement
+            });
+        </script>
     </head>
     <body>
-        <header>
-            <a href="index.html">
-              <h1 class="logo">DreamCart</h1>
-            </a>
-            <svg class="icon">
-                <use href="icons/accounts.svg#icon-profile" />
-            </svg>
-        </header>
-
-        <div class="information-container">
-            <span class="information-title"><strong>New York Hat</strong></span>
-            <img src="pictures/hat.png" alt="Hat" class="information-image">
-            <p class="detail"><strong>Price:</strong> $15.00</p>
-            <p class="detail"><strong>Size:</strong> One Size</p>
-            <p class="detail"><strong>Brand:</strong> Best Caps</p>
-            <p class="detail"><strong>Store:</strong> www.bestcaps.com</p>
-            <p class="detail"><strong>Style:</strong> baseball cap</p>
-            <p class="detail"><strong>Type of Clothing:</strong> Head Accessory</p>
-        </div>        
-
+      <header-element></header-element>
+        
+      <item-element>
+        <span slot="item-name">New York Hat</span>
+        <img slot="item-image" src="pictures/hat.png" />
+        <span slot="item-price">$15.00</span>
+        <span slot="item-size">One Size</span>
+        <span slot="item-brand">Best Caps</span>
+        <span slot="item-store">www.bestcaps.com</span>
+        <span slot="item-style">Baseball Cap</span>
+        <span slot="item-type">Head Accessory</span>
+      </item-element>
     </body>
 </html>
