--- a/packages/proto/public/jacket.html
+++ b/packages/proto/public/jacket.html
@@ -6,30 +6,39 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap" rel="stylesheet" />
 
+        <link rel="stylesheet" href="/styles/page.css" />
         <link rel="stylesheet" href="/styles/tokens.css" />
-        <link rel="stylesheet" href="/styles/header.css" />
-        <link rel="stylesheet" href="/styles/item.css" />
+        <script type="importmap">
+            {
+              "imports": {
+                "@calpoly/mustang": "https://unpkg.com/@calpoly/mustang"
+              }
+            }
+        </script>
+        <script type="module">
+            import { define } from "@calpoly/mustang";
+            import { ItemElement } from "/scripts/item.js";
+            import { HeaderElement } from "/scripts/header.js";
+          
+            define({
+              "item-element": ItemElement,
+              "header-element": HeaderElement
+            });
+        </script>
     </head>
     <body>
-        <header>
-            <a href="index.html">
-              <h1 class="logo">DreamCart</h1>
-            </a>
-            <svg class="icon">
-                <use href="icons/accounts.svg#icon-profile" />
-            </svg>
-        </header>
+      <header-element></header-element>
 
-        <div class="information-container">
-            <span class="information-title"><strong>Winter Jacket</strong></span>
-            <img src="pictures/jacket.png" alt="Jacket" class="information-image">
-            <p class="detail"><strong>Price:</strong> $225.00</p>
-            <p class="detail"><strong>Size:</strong> Large</p>
-            <p class="detail"><strong>Brand:</strong> Snow Outfitters</p>
-            <p class="detail"><strong>Store:</strong> www.snowoutfitters.com</p>
-            <p class="detail"><strong>Style:</strong> Thick Waterproof Jacket</p>
-            <p class="detail"><strong>Type of Clothing:</strong> outerwear</p>
-        </div>        
+      <item-element>
+        <span slot="item-name">Winter Jacket</span>
+        <img slot="item-image" src="pictures/jacket.png" />
+        <span slot="item-price">$225.00</span>
+        <span slot="item-size">Large</span>
+        <span slot="item-brand">Snow Outfitters</span>
+        <span slot="item-store">www.snowoutfitters.com</span>
+        <span slot="item-style">Thick Waterproof Jacket</span>
+        <span slot="item-type">Outerwear</span>
+      </item-element>
 
     </body>
 </html>
