file name changes

--- a/packages/proto/public/home.html
+++ b/packages/proto/public/home.html
@@ -33,14 +33,14 @@
         <header-element></header-element>
 
         <div class="wishlist-container">
-            <a href="/summer_wishlist.html">
+            <a href="/wishlist_summer.html">
                 <wishlist-card>
                     <span slot="wishlist-title">Beach Trip</span>
                     <img slot="wishlist-image" src="pictures/tropical_photo.png" alt="Winter Items" />
                 </wishlist-card>
             </a>
             
-            <a href="/winter_wishlist.html">
+            <a href="/wishlist_winter.html">
                 <wishlist-card>
                     <span slot="wishlist-title">Winter Items</span>
                     <img slot="wishlist-image" src="pictures/winter_photo.png" alt="Beach Trip" />
