--- a/packages/proto/public/wishlist_winter.html
+++ b/packages/proto/public/wishlist_winter.html
@@ -47,7 +47,7 @@
         </div>
 
         <div class="items-container">
-            <a href="/boots.html">
+            <a href="/item_boots.html">
                 <item-card>
                     <span slot="product-title">Winter Boots</span>
                     <img slot="item-image" src="pictures/boots.png" alt="Winter Boots" />
@@ -55,7 +55,7 @@
                 </item-card>
             </a>
             
-            <a href="/jacket.html"></a>
+            <a href="/item_jacket.html"></a>
                 <item-card>
                     <span slot="product-title">Heavy jacket</span>
                     <img slot="item-image" src="pictures/jacket.png" alt="Heavy jacket" />
