--- a/packages/proto/public/index.html
+++ b/packages/proto/public/index.html
@@ -5,9 +5,9 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap" rel="stylesheet" />
 
-        <link rel="stylesheet" href="/styles/tokens.css" />
-        <link rel="stylesheet" href="/styles/page.css" />
-        <link rel="stylesheet" href="styles/start_page.css" />
+        <link rel="stylesheet" href="./styles/tokens.css" />
+        <link rel="stylesheet" href="./styles/page.css" />
+        <link rel="stylesheet" href="./styles/start_page.css" />
         <script type="importmap">
             {
               "imports": {
@@ -22,6 +22,8 @@
             define({
               "header-element": HeaderElement
             });
+
+            HeaderElement.initializeOnce();
         </script>
     </head>
     
