--- a/packages/proto/public/wishlist_summer.html
+++ b/packages/proto/public/wishlist_summer.html
@@ -6,9 +6,9 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap" rel="stylesheet" />
 
-        <link rel="stylesheet" href="/styles/page.css" />
-        <link rel="stylesheet" href="/styles/tokens.css" />
-        <link rel="stylesheet" href="/styles/wishlist_page.css" />
+        <link rel="stylesheet" href="./styles/page.css" />
+        <link rel="stylesheet" href="./styles/tokens.css" />
+        <link rel="stylesheet" href="./styles/wishlist_page.css" />
         <script type="importmap">
             {
               "imports": {
@@ -31,6 +31,7 @@
               "budget-element": BudgetElement,
               "title-element": WishlistTitleElement
             });
+            HeaderElement.initializeOnce();
         </script>
     </head>
 
