--- a/packages/proto/public/index.html
+++ b/packages/proto/public/index.html
@@ -31,7 +31,7 @@
         <header-element></header-element>
         
         <div class="start-button-container">
-            <a href="home.html">
+            <a href="/wishlists">
                 <span class="start-text">Create a wishlist!</span>
             </a>
         </div>
