--- a/packages/proto/public/index.html
+++ b/packages/proto/public/index.html
@@ -34,9 +34,12 @@
 
             <div class="start-button-container">
                 <a href="/wishlists">
-                    <span class="start-text">Create a wishlist!</span>
+                    <span class="start-text">Keep all your dreams organized</span>
+                    <img src="./images/shopping.png" alt="description of image" />
+                    <span class="start-text">Create a wishlist now!</span>
                 </a>
             </div>
+            <a href="/login" class="login-button">Login</a>
         </mu-auth>
     </body>
 </html>
