--- a/packages/app/index.html
+++ b/packages/app/index.html
@@ -17,7 +17,7 @@
     
     <body>
         <mu-history provides="dreamin:history">
-            <mu-auth provides="dreamin:auth" redirect="/login.html">
+            <mu-auth provides="dreamin:auth" redirect="/dreaminlogin.html">
                 <mu-store provides="dreamin:model">
                     <article>
                         <dreamcart-header></dreamcart-header>
