--- a/packages/app/dreaminlogin.html
+++ b/packages/app/dreaminlogin.html
@@ -38,7 +38,7 @@
         padding: 0;
         font-family: var(--font-primary);
         color: var(--text-color);
-        background-color: var(--secondary-color);
+        background-color: var(--color-background-page);
         display: flex;
         align-items: center;
         justify-content: center;
