--- a/packages/app/newuser.html
+++ b/packages/app/newuser.html
@@ -13,6 +13,17 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,200;0,400;0,700;1,700&family=Merriweather:wght@400;700&display=swap"
       rel="stylesheet" />
+    <link rel="stylesheet" href="/styles/reset.css" />
+    <link rel="stylesheet" href="/styles/tokens.css" />
+    <script type="module">
+      import { define, Auth } from "@calpoly/mustang";
+      import { SignupFormElement } from "/src/components/signup-form";
+
+      define({
+        "mu-auth": Auth.Provider,
+        "signup-form": SignupFormElement
+      });
+    </script>
     <style>
       :root {
         --primary-color: #4caf50;
@@ -51,7 +62,7 @@
         font-size: 1.8rem;
         text-align: center;
         font-family: var(--font-main);
-        color: var(--color-text-main);
+        color: var(--text-color);
       }
 
       main.card {
@@ -87,7 +98,7 @@
       }
 
       p a {
-        color: var(--color-text-main);
+        color: var(--text-color);
         text-decoration: none;
         font-weight: bold;
       }
@@ -96,17 +107,13 @@
         text-decoration: underline;
       }
     </style>
-    <script type="module" crossorigin src="/assets/login-Btyk7DjP.js"></script>
-    <link rel="modulepreload" crossorigin href="/assets/lit-element-DlPYl0ax.js">
-    <link rel="modulepreload" crossorigin href="/assets/property-KzhXVXCE.js">
-    <link rel="stylesheet" crossorigin href="/assets/property-Un50KwDH.css">
   </head>
   <body>
     <div class="page">
       <mu-auth>
-        <h2>User Login</h2>
+        <h2>New User Registration</h2>
         <main class="card">
-          <login-form>
+          <signup-form>
             <label>
               <span>Username:</span>
               <input name="username" autocomplete="off" />
@@ -115,12 +122,12 @@
               <span>Password:</span>
               <input type="password" name="password" />
             </label>
-          </login-form>
+          </signup-form>
         </main>
         <p>
-          Or did you want to
-          <a href="./newuser.html">Sign up as a new user</a>
-          ?
+          Already have an account and want to
+          <a href="./dreaminlogin.html">Log In</a>
+          instead?
         </p>
       </mu-auth>
     </div>
